# NEMO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  Dockerfile  Dockerfile.splash_pad  LICENSE.md  MANIFEST.in  README.md  docker_run.sh  gunicorn.py  gunicorn_configuration.py  manage.py  pyproject.toml  requirements.txt  run_tests.py  settings.py  setup.py  start_NEMO_in_Docker.sh
.github/workflows/: black.yml
NEMO/: __init__.py  actions.py  admin.py  constants.py  context_processors.py  decorators.py  evaluators.py  exceptions.py  fields.py  filters.py  forms.py  interlocks.py  log.py  manage.py  middleware.py  migrations_utils.py  mixins.py  model_tree.py  models.py  parsers.py  permissions.py  policy.py  properties_schemas.py  provisioning.py  rates.py  rest_filter_backend.py  rest_pagination.py  serializers.py  settings.py  tasks.py  typing.py  urls.py  utilities.py  validators.py  wsgi.py
NEMO/apps/: __init__.py
NEMO/fixtures/: local_test.json  splash_pad.json
NEMO/media/: forgot_password_email.html  forgot_password_email_no_user.html
NEMO/migrations/: 0001_version_1_0_0.py  0002_version_1_0_0_squashed.py  0002_version_1_1_0.py  0003_version_1_2_0.py  0004_version_1_3_0.py  0005_version_1_4_0.py  0006_version_1_8_0.py  0007_version_1_15_0.py  0008_version_1_16_0.py  0009_version_1_19_0.py  0010_version_1_20_0.py  0011_version_1_22_0.py  0012_version_2_0_0_squashed.py  0012_version_2_2_0.py  0013_tool_image_and_description.py  0013_version_2_1_0.py  0014_version_2_2_0.py  0015_area_maximum_capacity.py  0016_area_reservation_warning.py  0017_remove_facility_and_site_names_from_help_text.py  0017_remove_facility_name_from_help_text.py  0018_area_count_staff_in_occupancy.py  0019_user_type_not_required.py  0020_auto_20200603_1550.py  0020_version_3_0_0.py  0020_version_3_0_0_squashed.py  0021_area_parent_area.py  0021_auto_20200619_2044.py  0021_auto_20200620_1147.py  0021_auto_20200622_1822.py  0021_auto_20200623_2010.py  0021_scheduledoutage_area.py  0021_version_3_1_0.py  0022_version_3_3_0.py  0023_badgereader.py  0023_consumable_reminder_threshold_reached.py  0024_contactinformation_user.py  0025_buddyrequest.py  (+211 more)
resources/: settings.py  splash_pad_rates.json  splash_pad_settings.py
(+583 files in other folders)
